--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,8 +1,19 @@
-<h2>OHDungeon</h2>
-<ul id="twitter-feed">
-  <li>here is a tweet</li>
-</ul>
-<h2>Last Five Commits</h2>
-<ul id="github-feed">
-  <li>here is a commit</li>
-</ul>
+<div class="container">
+  <h1 class="text-center">Turing Dungeon</h1>
+  <div class="row">
+
+    <div class="col-md-7">
+      <h3>Last Five Commits</h3>
+      <ul id="github-feed">
+        <li>here is a commit</li>
+      </ul>
+    </div>
+    <div class="col-md-4 col-md-offset-1">
+      <h3>OHDungeon</h3>
+      <ul id="twitter-feed">
+        <li>here is a tweet</li>
+      </ul>
+    </div>
+
+  </div> <!-- row -->
+</div> <!-- container -->
