--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,13 +3,13 @@
 
     <div class="navbar-header">
       <div class="navbar-brand">
-        <%= link_to image_tag("turing-t.png", size: "20"), "#" %>
+        <%= link_to image_tag("turing-t.png", size: "20"), root_path %>
       </div>
     </div> <!-- navbar-header -->
 
     <ul class="nav navbar-nav navbar-right text-right">
       <li>
-        <%= link_to "#", id: "github-login" do %>
+        <%= link_to profile_path, id: "github-login" do %>
           <i class="mega-octicon octicon-mark-github"></i>
         <% end %>
       </li>
