--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
-<div class="navbar navbar-default">
-  <div class="container nav">
+<nav class="navbar navbar-default">
+  <div class="container">
 
     <div class="navbar-header">
       <div class="navbar-brand">
@@ -7,19 +7,17 @@
       </div>
     </div> <!-- navbar-header -->
 
-    <ul class="nav navbar-nav navbar-right text-right">
+    <ul class="nav navbar-nav navbar-right">
       <% if current_user %>
-        <div class="dropdown">
-          <a data-toggle="dropdown">
-            <li>
-              <%= image_tag(current_user.image_url, size: "48", class: "img-responsive img-circle avatar") %>
-            </li>
+        <li class="dropdown">
+          <a data-toggle="dropdown" id="user-profile">
+            <%= image_tag(current_user.image_url, size: "35", class: "img-responsive img-circle") %>
           </a>
           <ul class="dropdown-menu">
             <li><%= link_to "Profile", profile_path %></li>
             <li><%= link_to "Logout", logout_path, method: :delete %></li>
           </ul>
-        </div>
+        </li>
       <% else %>
         <li>
           <%= link_to "/auth/github", id: "github-login" do %>
@@ -30,4 +28,4 @@
     </ul>
 
   </div> <!-- container nav -->
-</div> <!-- navbar navbar-default navbar-fixed-top -->
+</nav> <!-- navbar navbar-default navbar-fixed-top -->
