--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
-  <div id="avatar">
-    <%= image_tag("mock-user-profile.png", size: "200") %>
+  <div class="text-center">
+    <%= image_tag current_user.image_url, size: "200", class: "img-circle img-thumbnail" %>
+    <h2><%= current_user.nickname %></h2>
+    <h2><%= current_user.email %></h2>
   </div>
 </div>
