Fake, styled commit messages to show on dashboard

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -10,8 +10,16 @@ body {
   font-family: Avenir;
 }
 
+li {
+  list-style: none;
+}
+
 .navbar-brand {
   padding-left: 30px;
+}
+
+.well.well-sm h3 {
+  margin: 0;
 }
 
 #github-login {
