--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -22,10 +22,17 @@
       <% end %>
     </div>
     <div class="col-md-4 col-md-offset-1" id="twitter-feed">
-      <h2>Turing Twitter</h2>
-      <ul>
-        <li>here is a tweet</li>
-      </ul>
+      <h2 class="text-center">Turing Twitter</h2>
+      <% 5.times do |i| %>
+        <div class="well well-sm">
+          <ul class="list-inline">
+            <li><%= link_to image_tag("favicon.ico", size: "30"), root_path %></li>
+            <li><h4>OHDungeon</h4></li>
+            <li class="pull-right"><p><%= i * 3 + rand(1..4) %>m</p></li></br>
+            <li><p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men.</p></li>
+          </ul>
+        </div>
+      <% end %>
     </div>
 
   </div> <!-- row -->
