Holy shit, the navbar is fixed. Miracles are real.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -21,10 +21,6 @@ li {
   list-style: none;
 }
 
-.navbar-brand {
-  padding-left: 30px;
-}
-
 .well.well-sm h3 {
   margin: 0;
 }
@@ -46,7 +42,7 @@ li {
 }
 
 #user-profile {
-  padding: 7px;
+  padding: 7px 15px;
 }
 
 .footer {
