--- a/app/views/angular/show.html.erb
+++ b/app/views/angular/show.html.erb
@@ -1,19 +1,24 @@
 <div class="container">
   <section ng-controller="UserController">
-    <form ng-sumbit="add()">
-      <div class="text-left">
-        <input type="text" ng-model="currentTodo" />
-        <button ng-click="add()">Add</button>
-        <ul>
-          <li ng-repeat="item in todoList">
-            {{item.name}}
-            <button ng-click="delete($index)">Delete</button>
-            <input type="checkbox" ng-click="finished($index)">
-            <span ng-show="item.complete">Finished</span>
-            <span ng-show="!item.complete">Not Finished</span>
-          </li>
-        </ul>
-      </div>
-    </form>
+    <div class="text-left">
+      <ul>
+        <input type="text" ng-model="searchName" />
+        <!-- <li ng&#45;repeat="cohort in cohorts | filter:{'name':'1412'}"> -->
+        <li ng-repeat="cohort in cohorts">
+          <h2 style="color:{{cohort.color}};">{{cohort.name}} List of Students</h2>
+          <ul>
+            <li ng-repeat="student in cohort.students | filter:searchName">
+              <!-- <div ng&#45;show="cohort.graduated"> -->
+              {{student}}
+              <!-- </div> -->
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+    <input type="text" placeholder="favorite thing" ng-model="favThing" />
+    <input type="text" placeholder="favorte color" ng-model="myColor" />
+    <p style="color:{{myColor}};">{{favThing}}</p>
   </section>
 </div>
