Same graph behavior as before, only now we are scaling from the bottom and using SVG elements

--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -5,43 +5,42 @@
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <style type="text/css">
 
-      body
-      {
-        padding-top: 50px;
-        padding-left: 100px;
-      }
-
-      .bar
-      {
+      .bar {
         display: inline-block;
         width: 20px;
         height: 75px; /* Gets overriden by D3-assigned height below */
         margin-right: 2px;
-        background-color: teal;
+        fill: teal;
       }
 
     </style>
   </head>
   <body>
+    <div class="text-center" id="chartArea"></div>
     <script type="text/javascript">
 
       var dataset = [ 5, 10, 15, 20, 25, 40 ];
 
-      // this will define where we want to make our graph
-      // and then select all divs in that area
-      d3.select('body').selectAll('div')
-        // this is the data we want the graph to use
+      var svg = d3.select("#chartArea").append("svg")
+                  .attr("width", 400)
+                  .attr("height", 300);
+
+      var multiplier = 8;
+
+      svg.selectAll("rect")
         .data(dataset)
-        // enter() will be hit whenever we find a data element that doesn't have
-        // a corresponding UI element
         .enter()
-        // when we hit this enter, we should append a div to each data element
-        .append('div')
-        // set an attribute, in this case the class, which is defined above
-        .attr('class', 'bar')
-        // dynamically render the height based on the data value
-        .style('height', function (d) {
-          return d * 5 + 'px';
+        .append("rect")
+        .attr("class", "bar")
+        .attr("x", function(d, i) {
+          return i * 22;
+        })
+        .attr("y", function(d) {
+          return 300 - d * multiplier;
+        })
+        .attr("width", 20)
+        .attr("height", function (d) {
+          return d * multiplier;
         });
 
     </script>
