Use D3 scale function to dynamically calculate the height of our data elements

--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -20,10 +20,15 @@
     <script type="text/javascript">
 
       var dataset = [ 5, 10, 15, 20, 25, 40 ];
+      var w = 400, h = 300;
 
       var svg = d3.select("#chartArea").append("svg")
-                  .attr("width", 400)
-                  .attr("height", 300);
+                  .attr("width", w)
+                  .attr("height", h);
+
+      var yScale = d3.scale.linear()
+                     .domain([0,40])
+                     .range([0,h]);
 
       var multiplier = 8;
 
@@ -36,11 +41,11 @@
           return i * 22;
         })
         .attr("y", function(d) {
-          return 300 - d * multiplier;
+          return h - yScale(d);
         })
         .attr("width", 20)
         .attr("height", function (d) {
-          return d * multiplier;
+          return yScale(d);
         });
 
     </script>
