Dynamically generate the bars on the graph to expand to use the full graph width, with a bit of padding, using D3's rangeBands() function

--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -29,6 +29,10 @@
                   .attr("width", w)
                   .attr("height", h);
 
+      var xScale = d3.scale.ordinal()
+                     .domain(dataset)
+                     .rangeBands([0,w], 0.1, 0.3);
+
       var yScale = d3.scale.linear()
                      .domain([0,d3.max(dataset) * 1.1])
                      .range([0,h]);
@@ -40,13 +44,13 @@
         .enter()
         .append("rect")
         .attr("class", "bar")
-        .attr("x", function(d, i) {
-          return i * 22;
+        .attr("x", function(d) {
+          return xScale(d);
         })
         .attr("y", function(d) {
           return h - yScale(d);
         })
-        .attr("width", 20)
+        .attr("width", xScale.rangeBand())
         .attr("height", function (d) {
           return yScale(d);
         });
