--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -11,7 +11,6 @@
         width: 20px;
         height: 75px; /* Gets overriden by D3-assigned height below */
         margin-right: 2px;
-        fill: teal;
       }
 
     </style>
@@ -37,23 +36,22 @@
                      .domain([0,d3.max(dataset) * 1.1])
                      .range([0,h]);
 
-      var multiplier = 8;
+      var colorScale = d3.scale.linear()
+                         .domain([0,d3.max(dataset)])
+                         .range(["blue", "purple"]);
 
       svg.selectAll("rect")
         .data(dataset)
         .enter()
         .append("rect")
         .attr("class", "bar")
-        .attr("x", function(d) {
-          return xScale(d);
-        })
+        .attr("x", xScale)
         .attr("y", function(d) {
           return h - yScale(d);
         })
         .attr("width", xScale.rangeBand())
-        .attr("height", function (d) {
-          return yScale(d);
-        });
+        .attr("height", yScale)
+        .attr("fill", colorScale);
 
     </script>
   </body>
