--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -22,11 +22,16 @@
       var dataset = _.map(_.range(15), function(i) {
         return Math.random() * 100;
       });
-      var w = 400, h = 300;
+
+      var margin = { top: 0, right: 0, bottom: 0, left: 0 };
+          w = 400 - margin.left - margin.right;
+          h = 300 - margin.top - margin.bottom;
 
       var svg = d3.select("#chartArea").append("svg")
-                  .attr("width", w)
-                  .attr("height", h);
+                  .attr("width", w + margin.left + margin.right)
+                  .attr("height", h + margin.top + margin.bottom)
+                  .append("g")
+                  .attr("transform", "translate(" + margin.left + ", " + margin.top + ")");
 
       var xScale = d3.scale.ordinal()
                      .domain(dataset)
