--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -26,6 +26,13 @@
         stroke-width: 3px;
       }
 
+      .axis path, .axis line {
+        fill: none;
+        stroke: #000;
+        stroke-width: 1px;
+        shape-rendering: crispEdges;
+      }
+
     </style>
   </head>
   <body>
@@ -99,13 +106,58 @@
                            .domain([0,100])
                            .range([0,w]);
 
+      var xAxis = d3.svg.axis()
+                    .scale(xBubbleScale)
+                    .orient("bottom")
+                    .ticks(5)
+                    .tickSize(5)
+                    .tickPadding(10);
+
+       bubbleSvg.append("g")
+                .attr("class", "x axis")
+                .attr("transform", "translate(0, " + h + ")")
+                .call(xAxis);
+
       var yBubbleScale = d3.scale.linear()
                            .domain([0,100])
                            .range([h,0]);
 
-      var margin = { top: 0, right: 0, bottom: 0, left: 0 };
-          w = 400 - margin.left - margin.right;
-          h = 300 - margin.top - margin.bottom;
+      var yAxis = d3.svg.axis()
+                    .scale(yBubbleScale)
+                    .orient("left")
+                    .ticks(5);
+
+       bubbleSvg.append("g")
+                .attr("class", "y axis")
+                .attr("transform", "translate(0, 0)")
+                .call(yAxis);
+
+      bubbleSvg.selectAll("circle")
+               .data(bubbleDataset)
+               .enter()
+               .append("circle")
+               .attr("class", "bubble")
+               .attr("cx", function(d) {
+                 return xBubbleScale(d.x);
+               })
+               .attr("cy", function(d) {
+                 return yBubbleScale(d.y);
+               })
+               .attr("r", function(d) {
+                 return d.r;
+               })
+               .on("mouseover", function(d) {
+                 d3.select(this).classed("active", true);
+               })
+               .on("mouseout", function(d) {
+                 d3.select(this).classed("active", false);
+               })
+               .on("mousedown", function(d) {
+                 d3.select(this).attr("r", d.r * 2);
+               })
+               .on("mouseup", function(d) {
+                 d3.select(this).attr("r", d.r);
+               });
 
       function update() {
         _.each(bubbleDataset, function(datum) {
