Add UserVoice modal to root page for users to submit complaints and requests from

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "partials/user_voice" %>
+
 <div class="container">
   <h1 class="text-center">Turing Dungeon</h1>
   <div class="row">
