--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -4,7 +4,7 @@
   <h1 class="text-center">Turing Dungeon</h1>
   <div class="row">
 
-    <div class="col-md-7" id="github-feed">
+    <div class="col-md-6" id="github-feed">
       <h2 class="text-center">Lastest Community Commits</h2>
       <% @commits.each do |commit| %>
         <div class="well well-sm">
@@ -19,18 +19,10 @@
         </div>
       <% end %>
     </div>
-    <div class="col-md-4 col-md-offset-1" id="twitter-feed">
-      <h2 class="text-center">Turing Twitter</h2>
-      <% @tweets.each do |tweet| %>
-        <div class="well well-sm">
-          <ul class="list-inline">
-            <li><%= link_to image_tag(tweet.image_url, size: "30"), root_path %></li>
-            <li><h4><%= tweet.owner %></h4></li>
-            <li class="pull-right"><p><%= 2 * 3 + rand(1..4) %>m</p></li></br>
-            <li><p><%= tweet.message %></p></li>
-          </ul>
-        </div>
-      <% end %>
+    <div class="col-md-5 col-md-offset-1" id="twitter-feed">
+      <h2 class="text-center"><i class="fa fa-twitter"></i></h2>
+      <a class="twitter-timeline" href="https://twitter.com/indiesquidge/lists/turing" data-chrome="noheader transparent" data-widget-id="592809557610647554">Tweets from https://twitter.com/indiesquidge/lists/turing</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
 
   </div> <!-- row -->
