Update navbar to be transparent; update uservoice modal to default to feedback tab

--- a/app/views/partials/_user_voice.html.erb
+++ b/app/views/partials/_user_voice.html.erb
@@ -18,7 +18,7 @@ UserVoice.push(['showTab', 'classic_widget', {
   mode: 'full',
   primary_color: '#f97274',
   link_color: '#636363',
-  default_mode: 'support',
+  default_mode: 'feedback',
   forum_id: 293949,
   tab_label: 'Feedback & Support',
   tab_color: '#f97274',
