--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -23,6 +23,10 @@ li {
   list-style: none;
 }
 
+a {
+  color: black;
+}
+
 .well.well-sm h3 {
   margin: 0;
 }
@@ -45,6 +49,10 @@ li {
 
 #user-profile {
   padding: 7px 15px;
+}
+
+.custom-col-sm {
+  width: 12%;
 }
 
 .footer {
