--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -9,8 +9,8 @@
       <% @events.each do |event| %>
         <div class="well well-sm">
           <ul class="list-inline">
-            <li class="col-sm-1 col-xs-2">
-              <%= link_to image_tag(event.actor[:avatar_url], size: "50", class: "img-responsive img-circle"), "https://github.com/#{event.actor[:login]}" %>
+            <li class="col-sm-2 col-xs-2 custom-col-sm">
+              <%= link_to image_tag(event.actor[:avatar_url], class: "img-responsive img-circle avatar"), "https://github.com/#{event.actor[:login]}" %>
             </li>
             <li><h3><%= link_to event.actor[:login], "https://github.com/#{event.actor[:login]}" %></h3></li></br>
             <li><h6><%= link_to event.repo[:name], "https://github.com/#{event.repo[:name]}" %></h6></li></br>
