--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -38,16 +38,38 @@ li {
 }
 
 a {
-  color: black;
+  color: #333;
 }
 
 .well.well-sm {
-  background-color: rgba(5, 194, 209, 0.2);
-  background-image:
-  linear-gradient(
-    to top right,
-    rgba(5, 194, 209, 0.4), rgba(95, 225, 61, 0.2)
-  );
+  position: relative;
+  border: none;
+}
+
+.well.well-sm:before, .well.well-sm:after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: -3px;
+
+}
+
+.well.well-sm:before {
+  top: -3px;
+  width: 3px;
+  background-image: -webkit-gradient(linear, 0 100%, 0 0, from(#5fe13d), to(#05c2d1));
+  background-image: -webkit-linear-gradient(transparent, #5fe13d, #05c2d1);
+  background-image: -moz-linear-gradient(#5fe13d, #05c2d1);
+  background-image: -o-linear-gradient(#5fe13d, #05c2d1);
+}
+
+.well.well-sm:after {
+  right: -3px;
+  height: 3px;
+  background-image: -webkit-gradient(linear, 0 0, 100% 0, from(#05c2d1), to(#5fe13d));
+  background-image: -webkit-linear-gradient(left, #05c2d1, #5fe13d, transparent);
+  background-image: -moz-linear-gradient(left, #05c2d1, #5fe13d, transparent);
+  background-image: -o-linear-gradient(left, #05c2d1, #5fe13d, transparent);
 }
 
 .well.well-sm h3 {
