--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="col-md-6" id="github-feed">
     <h2 class="text-center"><i class="mega-octicon octicon-git-commit"></i></h2>
-    <% @user.commits.each do |commit| %>
+    <% @user.commits.reverse.each do |commit| %>
       <div class="well well-sm">
 
         <div id="user-commits">
