--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -100,6 +100,14 @@ a {
   width: 12%;
 }
 
+a > .mega-octicon {
+  font-size: 24px;
+}
+
+#github-login > .mega-octicon {
+  font-size: 32px;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
