--- a/app/views/cohorts/show.html.erb
+++ b/app/views/cohorts/show.html.erb
@@ -1,6 +1,11 @@
 <div class="container">
   <div class="col-md-6">
     <h2 class="text-center">Cohort Members</h2>
+    <div class="text-center">
+      <% if @cohort.users.empty? %>
+        <h3>No users yet!</h3>
+      <% end %>
+    </div>
     <% @cohort.users.each do |user| %>
       <div class="col-md-2">
         <%= link_to image_tag(user.image_url, size: "60", class: "img-responsive img-circle avatar", id: "cohort-user"), user %>
